[package]
name = "dpdk-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.171"
anyhow = "1.0.97"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

[build-dependencies]
pkg-config = "0.3.32"
